# msglib-cpp

./: .clang-format  .clang-tidy  .clang-tidy-ignore  .gitignore  CMakeLists.txt  README.md  build.sh  vcpkg.json
.gitea/workflows/: ci.yml
.github/workflows/: ci.yml
ci/: asan.yml  build.sh  clang.yml  gcc1030.yml  gcc1111.yml  gcc1130.yml  gcc1221.yml  gcc1230.yml  gcc1311.yml  gcc840.yml  gcc940.yml  pipeline.yml  test.sh  tsan.yml
example/: CMakeLists.txt  mbox.cpp  pool.cpp  queue.cpp  thread.cpp  timer.cpp
include/msglib/: Mailbox.h  Message.h  Msglib.h  Pool.h  Queue.h  Thread.h  TimeConv.h  TimerManager.h
include/msglib/detail/: BytePool.h  DiagResource.h  MailboxData.h  Queue.h  Receiver.h  TimeConv.h  TimerManagerData.h
sandbox/: CMakeLists.txt  pool.cpp
src/: CMakeLists.txt  Mailbox.cpp  TimerManager.cpp
test/: CMakeLists.txt  TestResource.h  test_Mailbox.cpp  test_Pool.cpp  test_Queue.cpp  test_TimeConv.cpp  test_Timers.cpp
